<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="137dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/btn_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_myTrips" />

    <Button
        android:id="@+id/btn_ListOfUsers"
        android:layout_width="158dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_ListOfUsers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_addTrip"
        android:layout_width="134dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/btn_addTrip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_trips"
        android:layout_width="167dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_trips"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ListOfUsers" />

    <Button
        android:id="@+id/btn_editProfile"
        android:layout_width="167dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_editProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_trips" />

    <Button
        android:id="@+id/btn_myTrips"
        android:layout_width="137dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:text="@string/btn_myTrips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_addTrip" />
</androidx.constraintlayout.widget.ConstraintLayout>