<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/linearLayout15"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout14">

        <TextView
            android:id="@+id/tv_lastName_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_lastName"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_lastName_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/et_lastName" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout14"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_selectAvatar_edit">

        <TextView
            android:id="@+id/tv_firstName_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_firstName"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_firstName_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/et_firstName" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup_edit"
        android:layout_width="368dp"
        android:layout_height="33dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout15">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Gender"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_male_edit"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:text="@string/rb_male" />

        <RadioButton
            android:id="@+id/rb_female_edit"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/rb_female" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_editProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/btn_updateProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout17" />

    <LinearLayout
        android:id="@+id/linearLayout16"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_edit">

        <TextView
            android:id="@+id/tv_newUser_email_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_newUser_email"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_newUser_email_edit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/et_newUser_email" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout17"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout16">

        <TextView
            android:id="@+id/tv_newUser_password_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_password"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_newUser_password_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:ems="10"
            android:inputType="textPassword" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_selectAvatar_edit"
        android:layout_width="142dp"
        android:layout_height="125dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/camera" />

    <Button
        android:id="@+id/editProfile_btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout17" />
</androidx.constraintlayout.widget.ConstraintLayout>