<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TripActivity">

    <Button
        android:id="@+id/btn_join"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="33dp"
        android:text="@string/btn_join" />

    <TextView
        android:id="@+id/tv_title_singleTrip"
        android:layout_width="372dp"
        android:layout_height="59dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/tv_title_singleTrip"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_coverPhoto_join"
        android:layout_width="188dp"
        android:layout_height="152dp"
        android:layout_below="@+id/tv_description_join"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="41dp"
        app:srcCompat="@drawable/camera" />

    <TextView
        android:id="@+id/tv_description_join"
        android:layout_width="380dp"
        android:layout_height="66dp"
        android:layout_below="@+id/tv_title_singleTrip"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="12dp"
        android:text="@string/tv_description_join"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_date_join"
        android:layout_width="165dp"
        android:layout_height="69dp"
        android:layout_below="@+id/tv_description_join"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="14dp"
        android:text="@string/tv_date"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_location_join"
        android:layout_width="157dp"
        android:layout_height="63dp"
        android:layout_below="@+id/tv_date_join"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tv_location_join"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_ViewOnMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_join"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="147dp"
        android:text="View Trip On Map" />

</RelativeLayout>