<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="437dp"
        android:layout_height="277dp"
        android:orientation="horizontal">

        <!--        <Button-->
        <!--            android:id="@+id/btn1"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_weight="1"-->
        <!--            android:text="Fragment 1 " />-->

        <!--        <Button-->
        <!--            android:id="@+id/btn2"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_weight="1"-->
        <!--            android:text="Map Fragment" />-->

        <EditText
            android:id="@+id/et_title"
            android:layout_width="360dp"
            android:layout_height="44dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="67dp"
            android:ems="10"
            android:hint="@string/et_title"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="247dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_title"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/iv_coverPhoto"
            android:text="@string/tv_description"
            android:textColor="#1D0B0B"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_title" />

        <EditText
            android:id="@+id/et_descrption"
            android:layout_width="252dp"
            android:layout_height="102dp"
            android:layout_below="@+id/tv_description"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="29dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" />

        <EditText
            android:id="@+id/et_date"
            android:layout_width="243dp"
            android:layout_height="56dp"
            android:layout_below="@+id/et_descrption"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="33dp"
            android:ems="10"
            android:hint="@string/hint_date"
            android:inputType="date" />

        <ImageView
            android:id="@+id/iv_coverPhoto"
            android:layout_width="153dp"
            android:layout_height="189dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="7dp"
            android:layout_marginBottom="9dp"
            app:srcCompat="@drawable/camera" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/cityTextAdd"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:text="Choose A Destination City"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/findCityAdd"
            android:layout_width="104dp"
            android:layout_height="40dp"

            android:layout_weight="1"
            android:text="Find city"

            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_createPlan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_createPlan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_descrption" />
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_descrption" />

    <Button
        android:id="@+id/btn_addFriends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_addFriends" />

</LinearLayout>